--- a/src/main/resources/assets/cfsmp/lang/en_us.json
+++ b/src/main/resources/assets/cfsmp/lang/en_us.json
@@ -13,6 +13,7 @@
   "item.cfsmp.plutonium_ingot": "Plutonium Ingot",
   "item.cfsmp.uraninit": "Uraninit Crystal",
   "item.cfsmp.crushed_uraninit": "Crushed Uraninit Dust",
+  "item.cfsmp.pale_eye": "Pale Eye",
 
   "item.cfsmp.arcaneal_mechanium_fragment": "Arcaneal Mechanium Fragment",
   "item.cfsmp.biological_mechanium_fragment": "Biological Mechanium Fragment",
